# archsimian

./: .SRCINFO  AUTHORS  ArchSimian.pro  ChangeLog  Makefile.am  NEWS  PKGBUILD  README.md  addintervalvalues.cpp  addintervalvalues.h  archsimian.conf  archsimian.cpp  archsimian.h  archsimian.ui  archsiminan.cpp.autosave  basiclibfunctions.cpp  basiclibfunctions.h  chrating  config.qrc  configure.ac  constants.h  database.cpp  database.h  dependents.cpp  dependents.h  dialogsetup.cpp  dialogsetup.h  dialogsetup.ui  exportMMTable.sql  getartistadjustedcount.cpp  getartistadjustedount.h  getartistexcludes.cpp  getartistexcludes.h  getartistexcludes2.cpp  getartistexcludes2.h  getartistexcludes3.cpp  getartistexcludes3.h  getartistexcludes4.cpp  getartistexcludes4.h  getartistexcludes5.cpp  (+30 more)
src/: albumidandselect.cpp  albumidandselect.h  archsimian.cpp  archsimian.h  archsimian.ui  archsimiantimer.cpp  archsimiantimer.h  basiclibfunctions.cpp  basiclibfunctions.h  buildalbumexcllibrary.cpp  buildalbumexcllibrary.h  code1.cpp  code1.h  constants.h  dependents.cpp  dependents.h  diagnostics.cpp  diagnostics.h  exporttoandroidaimp.cpp  exporttoandroidaimp.h  getartistadjustedcount.cpp  getartistadjustedcount.h  getartistexcludes.cpp  getartistexcludes.h  getplaylist.cpp  getplaylist.h  lastplayeddays.cpp  lastplayeddays.h  main.cpp  playlistcontentdialog.cpp  playlistcontentdialog.h  playlistcontentdialog.ui  playlistfunctions.cpp  playlistfunctions.h  playlistlimit.cpp  playlistlimit.h  runbashapp.h  utilities.cpp  utilities.h  writesqlfile.cpp  (+1 more)
