bin_PROGRAMS = archsimian
archsimian_SOURCES = archsimian.cpp archsimian.h archsimian.ui basiclibfunctions.cpp basiclibfunctions.h constants.h dependents.cpp dependents.h getartistexcludes.cpp getplaylist.cpp getplaylist.h lastplayeddays.cpp lastplayeddays.h main.cpp playlistfunctions.cpp playlistfunctions.h runbashapp.cpp runbashapp.h ui_archsimian.h writesqlfile.cpp writesqlfile.h
